[gd_scene load_steps=45 format=3 uid="uid://x31skbdgksdl"]

[ext_resource type="Script" path="res://scripts/general/level_main.gd" id="1_nvldi"]
[ext_resource type="Texture2D" uid="uid://b6xc8csuuhutd" path="res://res/MAPA_JOGO.jpg" id="2_lokf7"]
[ext_resource type="PackedScene" uid="uid://cwrl3t86dpahv" path="res://scenes/general/map.tscn" id="3_r17t6"]
[ext_resource type="Texture2D" uid="uid://bmjnhcqpa4h1g" path="res://res/MAPA_JOGO_OV.png" id="4_v54ms"]
[ext_resource type="Texture2D" uid="uid://dbryvpjdpfce5" path="res://res/SUN_SHINE.png" id="5_ruoji"]
[ext_resource type="Texture2D" uid="uid://yx5t6di3guma" path="res://res/SUN.png" id="6_nh0wg"]
[ext_resource type="Shader" path="res://shaders/fire_heat.gdshader" id="7_x13cr"]
[ext_resource type="Texture2D" uid="uid://bmptqxie7ni4c" path="res://res/Flame.png" id="8_dquab"]
[ext_resource type="Script" path="res://scripts/general/line_manager.gd" id="9_rijrw"]
[ext_resource type="PackedScene" uid="uid://di4d6nr6gxb8t" path="res://scenes/general/rocket.tscn" id="10_pb5qy"]
[ext_resource type="FontFile" uid="uid://bon14dm77mpt8" path="res://fonts/KGRedHands.ttf" id="11_y2cco"]
[ext_resource type="Script" path="res://scripts/general/nome_planeta_label.gd" id="12_k5yvr"]
[ext_resource type="PackedScene" uid="uid://b3dk076igvbbl" path="res://scenes/general/message.tscn" id="13_vrg1q"]
[ext_resource type="PackedScene" uid="uid://cig2gpf3kuqkq" path="res://scenes/criar_path/criar_path.tscn" id="14_elq2t"]
[ext_resource type="PackedScene" uid="uid://btsetkvtbaonl" path="res://scenes/criar_path/criar_path_reverse.tscn" id="15_8rmoi"]
[ext_resource type="PackedScene" uid="uid://04und56j0g87" path="res://scenes/general/intermediate_message.tscn" id="16_m68l6"]
[ext_resource type="Script" path="res://scripts/next_phase/next_phase_manager.gd" id="17_p47hu"]
[ext_resource type="PackedScene" uid="uid://c3pvrpj2n21cd" path="res://scenes/next_phase/next_phase_scene.tscn" id="18_r8h3i"]
[ext_resource type="Script" path="res://scripts/next_phase/next_phase_min_path.gd" id="19_23pau"]
[ext_resource type="Script" path="res://scripts/next_phase/next_phase_reverse.gd" id="20_3ei8k"]
[ext_resource type="PackedScene" uid="uid://diik6iqcg1u36" path="res://scenes/general/win_scene.tscn" id="21_1yb1c"]
[ext_resource type="PackedScene" uid="uid://btif7hfb7i3rc" path="res://scenes/general/lose_scene.tscn" id="22_0v1km"]
[ext_resource type="PackedScene" uid="uid://6eh3ia4g6l8g" path="res://scenes/general/level_num.tscn" id="23_eu0x6"]
[ext_resource type="PackedScene" uid="uid://2jo5hkcplmdt" path="res://scenes/pause_menu/pause_menu.tscn" id="24_6py77"]
[ext_resource type="Script" path="res://scripts/general/multiline_phases_manager.gd" id="25_ww521"]
[ext_resource type="PackedScene" uid="uid://lhqp0caarqll" path="res://scenes/battery/battery_main_container.tscn" id="26_cl7mg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydd0g"]
size = Vector2(399, 139)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vkoee"]
shader = ExtResource("7_x13cr")
shader_parameter/force = 0.26
shader_parameter/scale = 0.01
shader_parameter/debug = false

[sub_resource type="Curve" id="Curve_mnmal"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.509881, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_cbof3"]
curve = SubResource("Curve_mnmal")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nmlo5"]
lifetime_randomness = 0.17
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 2, 1)
emission_shape = 2
emission_sphere_radius = 97.83
angle_min = -30.9
angle_max = 216.0
direction = Vector3(0, -1, 0)
spread = 32.144
initial_velocity_min = 50.0
initial_velocity_max = 70.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.5
alpha_curve = SubResource("CurveTexture_cbof3")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vo5nc"]
radius = 215.0
height = 474.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fm3bj"]
size = Vector2(266, 1005)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjqdt"]
size = Vector2(270, 1005)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8l0hq"]
size = Vector2(171, 1948.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwt4n"]
size = Vector2(170.5, 1948.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sy2od"]
size = Vector2(133, 132)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_js653"]
size = Vector2(268.5, 269)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqrl5"]
size = Vector2(202.25, 203.5)

[sub_resource type="Animation" id="Animation_useid"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SunShine:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fkius"]
resource_name = "sun_shine"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SunShine:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1.68179, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.454902), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_upr88"]
_data = {
"RESET": SubResource("Animation_useid"),
"sun_shine": SubResource("Animation_fkius")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jxvo"]
bg_color = Color(1, 0.803922, 0.219608, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4dho5"]
font = ExtResource("11_y2cco")
font_size = 42
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Level_3" type="Node2D" node_paths=PackedStringArray("phases_manager", "path_creator", "reverse_path_creator", "battery") groups=["main_level"]]
script = ExtResource("1_nvldi")
phases_manager = NodePath("LevelPhasesManager")
path_creator = NodePath("CanvasLayer/CriarPath")
reverse_path_creator = NodePath("CanvasLayer/CriarPathReverse")
battery = NodePath("CanvasLayer/BatteryMainContainer")
metadata/_edit_horizontal_guides_ = [50.0]

[node name="MapSpr" type="Sprite2D" parent="."]
texture = ExtResource("2_lokf7")
centered = false

[node name="Map" parent="." node_paths=PackedStringArray("line_manager", "prohibited_areas") instance=ExtResource("3_r17t6")]
line_manager = NodePath("../LineManager")
prohibited_areas = NodePath("../ProhibitedAreasMap")

[node name="ProhibitedAreasMap" type="Node2D" parent="."]

[node name="BatteryArea" type="Area2D" parent="ProhibitedAreasMap"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProhibitedAreasMap/BatteryArea"]
position = Vector2(1694.5, 68.5)
shape = SubResource("RectangleShape2D_ydd0g")

[node name="MapSprOv" type="Sprite2D" parent="."]
texture = ExtResource("4_v54ms")
centered = false

[node name="SunShine" type="Sprite2D" parent="."]
texture = ExtResource("5_ruoji")
centered = false

[node name="Sun" type="Sprite2D" parent="."]
texture = ExtResource("6_nh0wg")
centered = false

[node name="SunDistort" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_vkoee")
position = Vector2(45, 524)
amount = 50
process_material = SubResource("ParticleProcessMaterial_nmlo5")
texture = ExtResource("8_dquab")
lifetime = 2.0
trail_lifetime = 1.83

[node name="LineManager" type="Node2D" parent="." node_paths=PackedStringArray("base_line")]
script = ExtResource("9_rijrw")
base_line = NodePath("../BaseLine")
num_of_lines = 5

[node name="BaseLine" type="Line2D" parent="."]
default_color = Color(1, 0, 0, 1)
joint_mode = 2
begin_cap_mode = 1
end_cap_mode = 2

[node name="Rocket" parent="." instance=ExtResource("10_pb5qy")]

[node name="Barriers" type="Node2D" parent="."]
metadata/_edit_group_ = true

[node name="Sun" type="Area2D" parent="Barriers"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/Sun"]
position = Vector2(0, 490)
shape = SubResource("CapsuleShape2D_vo5nc")

[node name="left" type="Area2D" parent="Barriers"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/left"]
position = Vector2(-133, 487.5)
shape = SubResource("RectangleShape2D_fm3bj")

[node name="right" type="Area2D" parent="Barriers"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/right"]
position = Vector2(2025, 488)
shape = SubResource("RectangleShape2D_yjqdt")

[node name="bottom" type="Area2D" parent="Barriers"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/bottom"]
position = Vector2(947, 1065.5)
rotation = 1.57079
shape = SubResource("RectangleShape2D_8l0hq")

[node name="top" type="Area2D" parent="Barriers"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/top"]
position = Vector2(947, -85.25)
rotation = 1.57079
shape = SubResource("RectangleShape2D_nwt4n")

[node name="mercurio" type="Area2D" parent="Barriers"]
position = Vector2(18.43, 19.98)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/mercurio"]
position = Vector2(331.57, 751.02)
shape = SubResource("RectangleShape2D_sy2od")

[node name="venus" type="Area2D" parent="Barriers"]
position = Vector2(18.43, 19.98)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/venus"]
position = Vector2(472.07, 260.02)
shape = SubResource("RectangleShape2D_sy2od")

[node name="terra" type="Area2D" parent="Barriers"]
position = Vector2(18.43, 19.98)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/terra"]
position = Vector2(611.57, 540.02)
shape = SubResource("RectangleShape2D_sy2od")

[node name="marte" type="Area2D" parent="Barriers"]
position = Vector2(18.43, 19.98)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/marte"]
position = Vector2(821.57, 400.02)
shape = SubResource("RectangleShape2D_sy2od")

[node name="jupiter" type="Area2D" parent="Barriers"]
position = Vector2(18.43, 19.98)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/jupiter"]
position = Vector2(1031.32, 750.52)
shape = SubResource("RectangleShape2D_js653")

[node name="saturno" type="Area2D" parent="Barriers"]
position = Vector2(18.43, 19.98)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/saturno"]
position = Vector2(1276.44, 225.27)
shape = SubResource("RectangleShape2D_dqrl5")

[node name="urano" type="Area2D" parent="Barriers"]
position = Vector2(18.43, 19.98)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/urano"]
position = Vector2(1451.57, 679.02)
shape = SubResource("RectangleShape2D_sy2od")

[node name="netuno" type="Area2D" parent="Barriers"]
position = Vector2(228, -329)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/netuno"]
position = Vector2(1451.57, 679.02)
shape = SubResource("RectangleShape2D_sy2od")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_upr88")
}
autoplay = "sun_shine"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 137.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50

[node name="NomePlaneta" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_1jxvo")
text = "PLANETA"
label_settings = SubResource("LabelSettings_4dho5")
vertical_alignment = 1
script = ExtResource("12_k5yvr")

[node name="BatteryMainContainer" parent="CanvasLayer" instance=ExtResource("26_cl7mg")]

[node name="MessageScene" parent="CanvasLayer" groups=["alert"] instance=ExtResource("13_vrg1q")]
unique_name_in_owner = true
time_visible = 3.0

[node name="CriarPath" parent="CanvasLayer" node_paths=PackedStringArray("phases_manager", "line_manager") groups=["path_creators"] instance=ExtResource("14_elq2t")]
phases_manager = NodePath("../../LevelPhasesManager")
line_manager = NodePath("../../LineManager")

[node name="CriarPathReverse" parent="CanvasLayer" node_paths=PackedStringArray("line_manager") groups=["path_creators"] instance=ExtResource("15_8rmoi")]
line_manager = NodePath("../../LineManager")

[node name="IntermMessage" parent="CanvasLayer" instance=ExtResource("16_m68l6")]
unique_name_in_owner = true

[node name="NextPhaseManager" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 1890.0
offset_bottom = 980.0
mouse_filter = 2
script = ExtResource("17_p47hu")

[node name="Simple" parent="CanvasLayer/NextPhaseManager" instance=ExtResource("18_r8h3i")]
layout_mode = 1

[node name="MinPath" parent="CanvasLayer/NextPhaseManager" instance=ExtResource("18_r8h3i")]
layout_mode = 1
script = ExtResource("19_23pau")

[node name="Reverse" parent="CanvasLayer/NextPhaseManager" instance=ExtResource("18_r8h3i")]
layout_mode = 1
script = ExtResource("20_3ei8k")

[node name="WinScene" parent="CanvasLayer" instance=ExtResource("21_1yb1c")]
unique_name_in_owner = true

[node name="LoseScene" parent="CanvasLayer" groups=["lose_screen"] instance=ExtResource("22_0v1km")]
unique_name_in_owner = true

[node name="LevelNum" parent="CanvasLayer" instance=ExtResource("23_eu0x6")]
unique_name_in_owner = true

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("24_6py77")]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="LevelPhasesManager" type="Node" parent="." node_paths=PackedStringArray("rocket", "next_phase_manager")]
script = ExtResource("25_ww521")
level_json_path = "res://levels_json/level_2.json"
rocket = NodePath("../Rocket")
next_phase_manager = NodePath("../CanvasLayer/NextPhaseManager")

[connection signal="battery_clicked" from="CanvasLayer/BatteryMainContainer" to="." method="_on_battery_clicked"]
